<?xml version="1.0" encoding="utf-8"?>
<!-- 主界面溢出菜单 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_backup"
        android:icon="@drawable/ic_backup"
        android:title="@string/menu_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/ic_export"
        android:title="@string/menu_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import"
        android:icon="@drawable/ic_import"
        android:title="@string/menu_import"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>